--- a/server/express_server/src/package.json
+++ b/server/express_server/src/package.json
@@ -3,6 +3,7 @@
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "express": "^4.18.1",
+        "node-fetch": "^3.3.1",
         "sqlite3": "^5.1.2"
     }
 }
