--- a/server/express_server/src/package.json
+++ b/server/express_server/src/package.json
@@ -1,4 +1,7 @@
 {
+    "scripts": {
+        "start": "node index.js"
+    },
     "dependencies": {
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
