--- a/server/express_server/src/package.json
+++ b/server/express_server/src/package.json
@@ -1,7 +1,8 @@
 {
     "type": "module",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "node --watch index.js"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
