--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "tailwindcss-animate": "^1.0.7",
