--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xcpdev",
   "version": "1.4.0",
+  "license": "Unlicense",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
